v2.2.0: csv
Prepares all project to compute cvs files
Adds job format enum-property
Some small fixes