@@ -1,5 +1,6 @@
 package demo.geo.app.services;
 
+import org.springframework.mock.web.MockMultipartFile;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -7,152 +8,210 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import org.mockito.Mock;
 
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
+import static org.assertj.core.api.AssertionsForClassTypes.assertThatThrownBy;
+import static org.mockito.Mockito.*;
 
-import org.apache.poi.hssf.usermodel.HSSFSheet;
-import org.apache.poi.hssf.usermodel.HSSFWorkbook;
-import org.apache.poi.ss.usermodel.CreationHelper;
-import org.apache.poi.ss.usermodel.Row;
-import org.junit.jupiter.api.AfterAll;
-import org.junit.jupiter.api.BeforeAll;
-
-import java.io.*;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.time.LocalDateTime;
 import java.util.List;
+import java.util.Collections;
+import java.time.LocalDateTime;
 
 import demo.geo.app.dao.SectionRepository;
-import demo.geo.app.entities.GeologicalClass;
-import demo.geo.app.entities.Job;
 import demo.geo.app.entities.Section;
+import demo.geo.app.exceptions.NotFoundException;
+import demo.geo.app.exceptions.UnprocessableException;
+import demo.geo.app.entities.Job;
+import demo.geo.app.enums.*;
 import demo.geo.app.dao.JobRepository;
-import demo.geo.app.enums.JStatus;
-import demo.geo.app.enums.JType;
 
 @ExtendWith(MockitoExtension.class)
 public class FileServiceImplTest {
     
     @Mock
     private SectionRepository sectionRepository;
-    
+
     @Mock
     private JobRepository jobRepository;
-    
+
     @Mock
-    private SectionService sectionService;
+    private XLSService xlsService;
     
     private FileService fileService;
     
-    private static File file;
     private static Job job;
-    
-    private static Section section1;
-    private static Section section2;
-    private static GeologicalClass geoClass1;
-    private static GeologicalClass geoClass2;
-    private static final long SECTION_ID_1 = 1L;
-    private static final long SECTION_ID_2 = 2L;
-    
-    private static final String FILE_NAME = "workbook.xls";
-    private static final String PATH = "src" + File.separator + "test" + File.separator + "resources";
-    private static final String FULL_FILE_NAME = PATH + File.separator + FILE_NAME;
-    
-    private static final String SECTION_HEADER = "Section name";
-    private static final String SECTION_1 = "Section 1";
-    private static final String SECTION_2 = "Section 2";
-    private static final String GEO_NAME_HEADER = "Class 1 name";
-    private static final String GEO_NAME_1 = "Geo Class 11";
-    private static final String GEO_NAME_2 = "Geo Class 21";
-    private static final String GEO_CODE_HEADER = "Class 1 code";
-    private static final String GEO_CODE_1 = "GC11";
-    private static final String GEO_CODE_2 = "GC21";
+    private static Section section;
+    private static MockMultipartFile file;
 
-    
-    @BeforeAll
-    public static void setUpClass() throws FileNotFoundException, IOException {
-        // create file table
-        HSSFWorkbook workbook = new HSSFWorkbook();
-        CreationHelper createHelper = workbook.getCreationHelper();
-        HSSFSheet sheet = workbook.createSheet();
-        
-        buildRow(sheet.createRow(0), createHelper, SECTION_HEADER, GEO_NAME_HEADER, GEO_CODE_HEADER);
-        buildRow(sheet.createRow(1), createHelper, SECTION_1, GEO_NAME_1, GEO_CODE_1);
-        buildRow(sheet.createRow(2), createHelper, SECTION_2, GEO_NAME_2, GEO_CODE_2);
-        
-        // 'resources' folder
-        if (!Files.exists(Path.of(PATH))) {
-            Files.createDirectory(Path.of(PATH));
-        }
-        
-        // write excel-fiction to the file
-        OutputStream testFile = new FileOutputStream(FULL_FILE_NAME);
-        workbook.write(testFile);
-        workbook.close();
-        testFile.close();
-    }
-    
-    private static void buildRow(Row row, CreationHelper createHelper, String section,
-                                 String geoclass, String geocode) {
-        row.createCell(0).setCellValue(createHelper.createRichTextString(section));
-        row.createCell(1).setCellValue(createHelper.createRichTextString(geoclass));
-        row.createCell(2).setCellValue(createHelper.createRichTextString(geocode));
-    }
-    
+    private static final long JOB_ID = 1L;
+    private static final long SECTION_ID = 1L;
+    private static final JobType JOB_TYPE = JobType.EXPORT;
+    private static final JobStatus JOB_STATUS = JobStatus.IN_PROGRESS;
+    private static final JobFormat JOB_FORMAT = JobFormat.XLS;
+    private static final String SECTION = "Section 1";
+    private static final String CONTENT_TYPE = "multipart/form-data";
+    private static final byte[] EMPTY_CONTENT = "".getBytes();
+
     @BeforeEach
-    public void setUp() throws FileNotFoundException {
-        fileService = new FileServiceImpl(sectionRepository, jobRepository, sectionService);
-        file = new File(FULL_FILE_NAME);
-        job = new Job(JType.EXPORT, JStatus.IN_PROGRESS, LocalDateTime.now());
-        job.setId(1L);
+    public void setUp() {
+        fileService = new FileServiceImpl(sectionRepository, jobRepository, xlsService);
         
-        geoClass1 = new GeologicalClass(SECTION_ID_1, GEO_NAME_1, GEO_CODE_1);
-        section1 = new Section(SECTION_1, List.of(geoClass1));
-        section1.setId(SECTION_ID_1);
-        geoClass2 = new GeologicalClass(SECTION_ID_2, GEO_NAME_2, GEO_CODE_2);
-        section2 = new Section(SECTION_2, List.of(geoClass2));
-        section2.setId(SECTION_ID_2);
-    }
-    
-    @AfterAll
-    public static void tearDownClass() throws IOException {
-        file.delete();
+        job = new Job(JOB_TYPE, JOB_STATUS, JOB_FORMAT, LocalDateTime.now());
+        job.setId(JOB_ID);
+        section = new Section(SECTION, Collections.emptyList());
+        section.setId(SECTION_ID);
+        file = new MockMultipartFile("filename", "filename.xlsx", CONTENT_TYPE, EMPTY_CONTENT);
     }
 
     /**
-     * Test of generateXLS method, of class FileServiceImpl.
+     * Test of startJob method, of class XLSServiceImpl.
      */
     @Test
-    public void testGenerateXLS_Success() {
-        job.setType(JType.EXPORT);
-        when(sectionRepository.findAll()).thenReturn(List.of(section1, section2));
+    public void testStartJob_Export_Success() {
+        when(sectionRepository.findAll()).thenReturn(List.of(section));
         
-        fileService.generateXLS(job);
+        fileService.startJob(JobType.EXPORT, JOB_FORMAT);
         
         verify(sectionRepository).findAll();
+        verify(xlsService).generateXLS(any());
+        verify(jobRepository).save(any());
+    }
+    
+    /**
+     * Test of startJob method, of class XLSServiceImpl.
+     */
+    @Test
+    public void testStartJob_Export_Failed() {
+        when(sectionRepository.findAll()).thenReturn(Collections.emptyList());
+        
+        assertThatThrownBy(() -> fileService.startJob(JobType.EXPORT, JOB_FORMAT))
+                                  .isInstanceOf(NotFoundException.class);
+        
+        verify(sectionRepository).findAll();
+        verify(xlsService, times(0)).generateXLS(any());
+        verify(jobRepository, times(0)).save(any());
+    }
+    
+    /**
+     * Test of startJob method, of class XLSServiceImpl.
+     */
+    @Test
+    public void testStartJob_Import_Success() {
+        fileService.startJob(JobType.IMPORT, JOB_FORMAT);
+        
+        verify(sectionRepository, times(0)).findAll();
+        verify(xlsService, times(0)).generateXLS(any());
         verify(jobRepository).save(any());
     }
 
     /**
-     * Test of parseXLS method, of class FileServiceImpl.
+     * Test of getJobStatus method, of class XLSServiceImpl.
      */
     @Test
-    public void testParseXLS_Success() {
-        job.setType(JType.IMPORT);
-        section2.setId(SECTION_ID_2+1L);
-        sectionRepository.delete(section2);
+    public void testGetJobStatus_Export_Success() {
+        job.setType(JobType.EXPORT);
+        when(jobRepository.getById(JOB_ID)).thenReturn(job);
         
-        when(sectionRepository.findByName(SECTION_1)).thenReturn(section1);
-        when(sectionRepository.findByName(SECTION_2)).thenReturn(null);
-        when(sectionRepository.save(any())).thenReturn(section2);
+        fileService.getJobStatus(JobType.EXPORT, JOB_ID);
+        verify(jobRepository).getById(JOB_ID);
+    }
+
+    /**
+     * Test of getJobStatus method, of class XLSServiceImpl.
+     */
+    @Test
+    public void testGetJobStatus_Export_Failed_DoesntExists() {
+        when(jobRepository.getById(JOB_ID)).thenReturn(null);
         
-        fileService.parseXLS(file, job);
+        assertThatThrownBy(() -> fileService.getJobStatus(JobType.EXPORT, JOB_ID))
+                                  .isInstanceOf(NotFoundException.class);
+        verify(jobRepository).getById(JOB_ID);
+    }
+    
+    /**
+     * Test of getJobStatus method, of class XLSServiceImpl.
+     */
+    @Test
+    public void testGetJobStatus_Export_Failed_NotThisType() {
+        job.setType(JobType.IMPORT);
+        when(jobRepository.getById(JOB_ID)).thenReturn(job);
         
-        verify(sectionRepository, times(2)).findByName(any());
-        verify(sectionRepository, times(2)).save(any());
-        verify(jobRepository).save(any());
+        assertThatThrownBy(() -> fileService.getJobStatus(JobType.EXPORT, JOB_ID))
+                                  .isInstanceOf(UnprocessableException.class);
+        verify(jobRepository).getById(JOB_ID);
+    }
+    
+    /**
+     * Test of getJobStatus method, of class XLSServiceImpl.
+     */
+    @Test
+    public void testGetJobStatus_Import_Success() {
+        job.setType(JobType.IMPORT);
+        when(jobRepository.getById(JOB_ID)).thenReturn(job);
+        
+        fileService.getJobStatus(JobType.IMPORT, JOB_ID);
+        verify(jobRepository).getById(JOB_ID);
+    }
+
+    /**
+     * Test of getJobStatus method, of class XLSServiceImpl.
+     */
+    @Test
+    public void testGetJobStatus_Import_Failed_DoesntExists() {
+        when(jobRepository.getById(JOB_ID)).thenReturn(null);
+        
+        assertThatThrownBy(() -> fileService.getJobStatus(JobType.IMPORT, JOB_ID))
+                                  .isInstanceOf(NotFoundException.class);
+        verify(jobRepository).getById(JOB_ID);
+    }
+    
+    /**
+     * Test of getJobStatus method, of class XLSServiceImpl.
+     */
+    @Test
+    public void testGetJobStatus_Import_Failed_NotThisType() {
+        job.setType(JobType.EXPORT);
+        when(jobRepository.getById(JOB_ID)).thenReturn(job);
+        
+        assertThatThrownBy(() -> fileService.getJobStatus(JobType.IMPORT, JOB_ID))
+                                  .isInstanceOf(UnprocessableException.class);
+        verify(jobRepository).getById(JOB_ID);
+    }
+    
+    /**
+     * Test of exportXLS method, of class XLSServiceImpl.
+     */
+    @Test
+    public void testExportXLS_Failed_Type() {
+        job.setType(JobType.IMPORT);
+
+        when(jobRepository.getById(JOB_ID)).thenReturn(job);
+        assertThatThrownBy(() -> fileService.exportXLS(JOB_ID))
+                                  .isInstanceOf(UnprocessableException.class);
+        verify(jobRepository).getById(JOB_ID);
+    }
+    
+    /**
+     * Test of exportXLS method, of class XLSServiceImpl.
+     */
+    @Test
+    public void testExportXLS_Failed_Status() {
+        job.setStatus(JobStatus.IN_PROGRESS);
+        
+        when(jobRepository.getById(JOB_ID)).thenReturn(job);
+        assertThatThrownBy(() -> fileService.exportXLS(JOB_ID))
+                                  .isInstanceOf(UnprocessableException.class);
+        verify(jobRepository).getById(JOB_ID);
+    }
+
+    /**
+     * Test of importXLS method, of class XLSServiceImpl.
+     */
+    @Test
+    public void testImportXLS_Failed_EmptyFile() {
+        job.setStatus(JobStatus.IN_PROGRESS);
+
+        assertThatThrownBy(() -> fileService.importXLS(job, file))
+                .isInstanceOf(UnprocessableException.class);
+        verify(xlsService, times(0)).parseXLS(any(), any());
     }
     
 }
